--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,16 @@
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>1.7.7</version>
 		</dependency>
+        <dependency>
+           <groupId>org.easyrules</groupId>
+           <artifactId>easyrules-jmx</artifactId>
+           <version>2.3.0</version>
+        </dependency>
+        <dependency>
+    		<groupId>org.apache.commons</groupId>
+    		<artifactId>commons-lang3</artifactId>
+    		<version>3.0</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
